styles.less
// CSS RESET
/* 1. Use a more-intuitive box-sizing model */
*,
*::before,
*::after {
	box-sizing: border-box;
}

/* 2. Remove default margin */
* {
	margin: 0;
}

body {
	/* 3. Add accessible line-height */
	line-height: 1.5;
	/* 4. Improve text rendering */
	-webkit-font-smoothing: antialiased;
}

/* 5. Improve media defaults */
img,
picture,
video,
canvas,
svg {
	display: block;
	max-width: 100%;
}

/* 6. Inherit fonts for form controls */
input,
button,
textarea,
select {
	font: inherit;
}

/* 7. Avoid text overflows */
p,
h1,
h2,
h3,
h4,
h5,
h6 {
	overflow-wrap: break-word;
}

/* 8. Improve line wrapping */
p {
	text-wrap: pretty;
}
h1,
h2,
h3,
h4,
h5,
h6 {
	text-wrap: balance;
}

/*
    9. Create a root stacking context
  */
#root,
#__next {
	isolation: isolate;
}

//   VARIABLES
// ##Colors
@clr-gunmetal: #5e607a;
@clr-darkspace-blue: #00001a;
@clr-almost-white: #f2f2f2;
@clr-light-vermillion: #f15d51;
@clr-silver: #c5c6ce;
@clr-yellow: #e9aa52;
@clr-light-grey: #d8d8d8;
@clr-grey: #5e607a;

// TYPOGRAPHY

@fs-regular: 0.938rem;

@fw-regular: 400;
@fw-bold: 700;
@fw-extrabold: 800;

// MIXINS

.sp-heading-big {
	line-height: 1;
	letter-spacing: 0;
}

.heading-xl {
	font-size: clamp(2.5rem, 7.29vw, 3.5rem);
	font-weight: @fw-extrabold;
	.sp-heading-big();
}
.heading-l {
	font-size: 2.5rem;
	font-weight: @fw-bold;
	.sp-heading-big();
}

.heading-m {
	font-size: 2rem;
	font-weight: @fw-bold;
	.sp-heading-big();
}
.heading-sm {
	font-size: 1.25rem;
	font-weight: @fw-extrabold;
	line-height: 1.2;
}
.heading-xs {
	font-size: 1.125rem;
	font-weight: @fw-extrabold;
	line-height: 1.33;
}
.body-text {
	font-size: @fs-regular;
	font-weight: @fw-regular;
	line-height: 1.73;
}

.flex(@align, @justify, @direction) {
	display: flex;
	align-items: @align;
	justify-content: @justify;
	flex-direction: @direction;
}

// GENERAL STYLES

body {
	display: grid;
	.body-text();
	font-family: "Inter", serif;
	gap: 2rem;
	place-content: center;
	background-color: @clr-almost-white;
	padding: 2rem 1rem;
	@media (min-width: 60rem) {
		padding: 6.813rem 6rem;
		max-height: 100vh;
	}
	main {
		display: grid;
		gap: 4rem;
		max-width: 69.375rem;
		ul {
			list-style-type: none;
		}
		@media (min-width: 60rem) {
			grid-template-columns: repeat(3, 1fr);
			grid-template-rows: repeat(3, 1fr);
			gap: 1.875rem;
			max-height: 55rem;
		}
	}
}

// OVERLAY STYLES

.overlay {
	display: none;
	position: fixed;
	background-color: rgba(0, 0, 0, 0.685);
	width: 100%;
	height: 100vh;
	top: 0;
	left: 0;
	z-index: 1;
}

// HEADER STYLES

header {
	.flex(center, space-between, row);
	position: relative;

	@media (min-width: 60rem) {
		.hamburger {
			display: none;
		}
	}

	.menu {
		height: 100%;
		position: fixed;
		z-index: 10;
		top: 0;
		right: 0;
		background-color: @clr-almost-white;
		overflow-x: hidden;
		transition: 0.5s;
		padding: 2rem 1rem;
		.flex(center, flex-start, row);
		display: none;

		@media (min-width: 60rem) {
			display: flex;
			height: auto;
			position: static;
			&__close {
				display: none;
			}
		}

		&__close {
			align-self: flex-start;
			position: absolute;
			right: 1.5rem;
		}

		&__list {
			.flex(flex-start, space-between, column);
			gap: 1.5rem;
			list-style-type: none;
			@media (min-width: 60rem) {
				.flex(flex-start, space-between, row);
			}
		}
		&__list-item {
			a {
				text-decoration: none;
				color: @clr-darkspace-blue;
				font-size: 1.125rem;
				line-height: 1.33;
				text-transform: capitalize;
				font-weight: @fw-regular;
				cursor: pointer;

				&:hover {
					color: @clr-light-vermillion;
				}
			}
		}
	}
}

//  ARTICLE STYLES
.article {
	display: grid;
	gap: 1rem;
	@media (min-width: 60rem) {
		grid-area: 1 / 1 / 3 / 3;
		gap: 1.75rem;
		grid-template-columns: repeat(2, 1fr);
		grid-template-rows: repeat(2, 1fr);
	}

	&__header {
		display: grid;
		gap: 1.5rem;
		max-height: 18.75rem;
		@media (min-width: 60rem) {
			grid-area: 1 / 1 / 2 / 3;
		}
	}
	&__title {
		.heading-xl();
		color: @clr-darkspace-blue;
		@media (min-width: 60rem) {
			grid-area: 2 / 1 / 4 / 2;
			align-self: flex-end;
		}
	}
	&__summary {
		.flex(flex-start, center, column);
		gap: 1.5rem;
		color: @clr-gunmetal;
		.body-text();
		@media (min-width: 60rem) {
			grid-area: 2 / 2 / 4 / 3;
			justify-content: flex-start;
			gap: 1.813rem;
			align-self: flex-end;
		}

		.readmore-btn {
			background-color: @clr-light-vermillion;
			border: none;
			color: @clr-darkspace-blue;
			text-transform: uppercase;
			font-size: 0.875rem;
			line-height: 1.71;
			font-weight: @fw-bold;
			padding: 0.75rem 2.063rem;
		}
	}
}

// NEW STYLES
.new {
	background-color: @clr-darkspace-blue;
	color: @clr-silver;
	padding: 1.5rem 1.25rem;
	@media (min-width: 60rem) {
		grid-area: 1 / 3 / 3 / 4;
	}

	&__title {
		color: @clr-yellow;
		.heading-m();
		margin-bottom: 2.188rem;
	}

	&__list {
		margin-left: -2.5rem;
	}
	&__list-item {
		h3 {
			.heading-sm();
			color: @clr-almost-white;
			margin-bottom: 0.5rem;
		}
		p {
			.body-text();
		}
	}
	&__break {
		border: 1px solid #5e607a;
		margin-top: 1.813rem;
		margin-bottom: 1.938rem;
	}
}

// FOOTER STYLES
.footer {
	@media (min-width: 60rem) {
		grid-area: 3 / 1 / 4 / 4;
		margin-top: 4.438rem;
	}
	&__list {
		.flex(flex-start, flex-start, column);
		margin-left: -2.5rem;
		gap: 2rem;
		@media (min-width: 60rem) {
			flex-direction: row;
			gap: 1.875rem;
		}
	}
	&__list-item {
		display: grid;
		grid-template-columns: 1fr 2fr;
		gap: 1.5rem;
		align-items: center;
		@media (min-width: 60rem) {
			align-items: flex-start;
		}

		img {
			align-self: stretch;
			height: 7.938rem;
		}

		&-number {
			color: @clr-light-vermillion;
			.heading-m();
			margin-bottom: 0.75rem;
		}
		&-name {
			color: @clr-darkspace-blue;
			.heading-xs();
			margin-bottom: 0.563rem;
			cursor: pointer;

			&:hover {
				color: @clr-light-vermillion;
			}
		}
		&-description {
			color: @clr-gunmetal;
			.body-text();
		}
	}
}

